--- a/angular-frontend/src/app/lms-page/lms-page.component.html
+++ b/angular-frontend/src/app/lms-page/lms-page.component.html
@@ -130,7 +130,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-indigo-600">
           <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
         </svg>
-        Course Library
+        Library
       </h2>
       <div class="space-y-1 max-h-96 overflow-y-auto" *ngIf="courseTree">
         <ng-container *ngTemplateOutlet="treeTemplate; context: {item: courseTree, level: 0}"></ng-container>
