--- a/angular-frontend/src/app/tasks-page/task-detail-page/task-detail-page.component.html
+++ b/angular-frontend/src/app/tasks-page/task-detail-page/task-detail-page.component.html
@@ -21,7 +21,7 @@
 
       <section class="content-section">
         <h2 class="section-title">Prerequisites</h2>
-        <ul class="prerequisites-list" *ngIf="prerequisites?.length; else noPrerequisites">
+        <ul class="prerequisites-list" *ngIf="prerequisites.length; else noPrerequisites">
           <li class="prerequisite-item" *ngFor="let prereq of prerequisites">
             <span class="check-icon">✓</span>
             {{ prereq }}
@@ -44,25 +44,6 @@
               placeholder="Add a comment..."
               class="comment-textarea"
             ></textarea>
-          </div>
-
-          <button class="btn btn-primary" (click)="addComment()" [disabled]="!newComment.trim()">
-            Add Comment
-          </button>
-
-          <div class="comments-list" *ngIf="comments?.length; else noComments">
-            <div *ngFor="let comment of comments" class="comment-item">
-              <div class="avatar">
-                <img src="icons8-profile-picture.png" alt="User avatar">
-              </div>
-              <div class="comment-content">
-                <div class="comment-header">
-                  <span class="comment-author">{{ comment.author }}</span>
-                  <span class="comment-time">{{ comment.timestamp | date:'medium' }}</span>
-                </div>
-                <p class="comment-text">{{ comment.content }}</p>
-              </div>
-            </div>
           </div>
           <ng-template #noComments>
             <p class="description-text">No comments yet</p>
@@ -145,7 +126,7 @@
           </div>
 
           <!-- Completion Date (if completed) -->
-          <div class="info-item" *ngIf="selectedTask?.completionDate">
+          <div class="info-item" *ngIf="selectedTask.completionDate">
             <label>Completion Date</label>
             <div class="info-value">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -157,7 +138,7 @@
           </div>
 
           <!-- Associated Project -->
-          <div class="info-item" *ngIf="selectedTask?.projectId">
+          <div class="info-item" *ngIf="selectedTask.projectId">
             <label>Project</label>
             <div class="info-value">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -168,7 +149,7 @@
           </div>
 
           <!-- Assignee -->
-          <div class="info-item" *ngIf="selectedTask?.assigneeId">
+          <div class="info-item" *ngIf="selectedTask.assigneeId">
             <label>Assigned To</label>
             <div class="info-value">
               <div class="assignee">
@@ -181,15 +162,15 @@
           </div>
 
           <!-- Tags -->
-          <div class="info-item" *ngIf="selectedTask?.tags?.length">
+          <div class="info-item" *ngIf="selectedTask.tags?.length">
             <label>Tags</label>
             <div class="tags-container">
-              <span class="tag" *ngFor="let tag of selectedTask?.tags">{{ tag }}</span>
+              <span class="tag" *ngFor="let tag of selectedTask.tags">{{ tag }}</span>
             </div>
           </div>
 
           <!-- Creation Date -->
-          <div class="info-item" *ngIf="selectedTask?.dateCreated">
+          <div class="info-item" *ngIf="selectedTask.dateCreated">
             <label>Created</label>
             <div class="info-value">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -204,10 +185,10 @@
         </div>
       </section>
 
-      <section class="sidebar-section" *ngIf="selectedTask?.attachments?.length">
+      <section class="sidebar-section" *ngIf="selectedTask.attachments?.length">
         <h2 class="section-title">Attachments</h2>
         <div class="attachments-list">
-          <a href="#" class="attachment-item" *ngFor="let attachment of selectedTask?.attachments">
+          <a href="#" class="attachment-item" *ngFor="let attachment of selectedTask.attachments">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
             </svg>
